--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -17,4 +17,6 @@
     <string name="multiplicacion">x</string>
     <string name="resta">-</string>
     <string name="suma">+</string>
+    <string name="BorrarParcial">DEL</string>
+    <string name="ManMenos">-/+</string>
 </resources>
